# rules_poetry

./: .bazelrc.github  .gitignore  LICENSE  README.md  WORKSPACE
.github/workflows/: main.yml
remarshal/: BUILD  WORKSPACE  remarshal.py  requirements.txt
rules_poetry/: defs.bzl  json_parser.bzl  poetry.bzl
test/: BUILD  pyproject.toml  test_dep_group.py  test_invalid_import.py  test_sys_marker.py  test_valid_import.py  timezone.py
test/no_group_deps/: BUILD  pyproject.toml  test_valid_import.py
tools/: remarshal.par
