[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Nathan Howell <nathan@sonia.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
colorama = {version = "^0.4.1", platform = "sunos4"}
kfp = "^0.1.31"
numpy = "^1.17"
pandas = "^1.5.1"
pytz = "^2022"
requests-toolbelt = "^0.9.1"
wrapt = "^1.11"

[tool.poetry.dev-dependencies]
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
